--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 *.DS_Store
 
 images/*
+process_data/data/ims_tanzania_2011/
+process_data/data/ims_uganda_2011/
+process_data/data/ims_nigeria_2013/
 process_data/data/ims_malawi_2016/
 process_data/data/ims_ethiopia_2015/
 process_data/data/input/Nightlights
